Add widget support

--- a/go.tmpl
+++ b/go.tmpl
@@ -10,6 +10,7 @@ import (
 	"labix.org/v2/mgo"
 	"labix.org/v2/mgo/bson"
 	"github.com/sipin/gothrift/thrift"
+	"github.com/sipin/gorazor/gorazor"
 
 	//Own libs
 	"db"
@@ -214,6 +215,40 @@ func (o *$obj.name.value) ReadForm(params map[string]string) {
 	}
 #end if
 #end for
+}
+
+#for field in $obj.fields
+#if $field.name.value != "ID"
+func (o *$obj.name.value) ${field.name.value}ToWidget() *gorazor.Widget {
+	return &gorazor.Widget{
+		Label: "$field.label",
+	#if $field.type == "string"
+		Value : o.$field.name.value,
+	#else if $field.type == "i32"
+		Value : strconv.FormatInt(int64(o.$field.name.value), 10),
+	#else if $field.type == "i64"
+		Value : strconv.FormatInt(o.$field.name.value, 10),
+	#else if $field.type == "bool"
+		Value : strconv.FormatBool(o.$field.name.value),
+	#else
+	Change go.tmpl go support $field.type now!
+	#end if
+		Name: "$field.name.value",
+		PlaceHolder: "",
+		Type: "$field.type",
+	}
+}
+#end if
+#end for
+
+func (o *$obj.name.value) ToWidgets() []*gorazor.Widget {
+	return []*gorazor.Widget{
+#for field in $obj.fields
+#if $field.name.value != "ID"
+		o.${field.name.value}ToWidget(),
+#end if
+#end for
+	}
 }
 
 //foreigh keys
