--- a/go.tmpl
+++ b/go.tmpl
@@ -277,27 +277,51 @@ func (o *$field.foreign) GetAll$(obj.name.value)() (result []*$obj.name.value, e
 
 //Collection Manage methods
 
-func $(obj.name.value)FindOne(query interface{}) (result *$obj.name.value, err error) {
+func $(obj.name.value)FindOne(query interface{}, sortFields ...string) (result *$obj.name.value, err error) {
 	session, col := db.GetCol("$obj.name.value")
 	defer session.Close()
 
-	err = col.Find(query).One(&result)
+	q := col.Find(query)
+
+	if sortFields == nil {
+		q.Sort("-_id")
+	} else {
+		q.Sort(sortFields...)
+	}
+
+	err = q.One(&result)
 	return
 }
 
-func $(obj.name.value)Find(query interface{}, limit int, offset int) (result []*$obj.name.value, err error) {
+func $(obj.name.value)Find(query interface{}, limit int, offset int, sortFields ...string) (result []*$obj.name.value, err error) {
 	session, col := db.GetCol("$obj.name.value")
 	defer session.Close()
 
-	err = col.Find(query).Limit(limit).Skip(offset).All(&result)
+	q := col.Find(query).Limit(limit).Skip(offset)
+
+	if sortFields == nil {
+		q.Sort("-_id")
+	} else {
+		q.Sort(sortFields...)
+	}
+
+	err = q.All(&result)
 	return
 }
 
-func $(obj.name.value)FindAll(query interface{}) (result []*$obj.name.value, err error) {
+func $(obj.name.value)FindAll(query interface{}, sortFields ...string) (result []*$obj.name.value, err error) {
 	session, col := db.GetCol("$obj.name.value")
 	defer session.Close()
 
-	err = col.Find(query).All(&result)
+	q := col.Find(query)
+
+	if sortFields == nil {
+		q.Sort("-_id")
+	} else {
+		q.Sort(sortFields...)
+	}
+
+	err = q.All(&result)
 	return
 }
 
