--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -15,3 +15,12 @@ var _ = fmt.Printf
 
 var GoUnusedProtection__ int
 var ErrInvalidObjectId = errors.New("Invalid input to ObjectIdHex")
+
+type Widget struct {
+	Label       string
+	Value       string
+	Name        string
+	PlaceHolder string
+	Type        string
+	ErrorMsg    string
+}
