--- a/go_enum.tmpl
+++ b/go_enum.tmpl
@@ -3,7 +3,7 @@ package $namespace
 #for obj in $objs
 const (
 	#for item in $obj.values
-	${name.upper()}_${item.name.value.upper()} int32 = $item.tag
+	${obj.name.value.upper()}_${item.name.value.upper()} int32 = $item.tag
 	#end for
 )
 
