--- a/go.tmpl
+++ b/go.tmpl
@@ -1,5 +1,6 @@
 package $namespace
 
+#import os
 import (
 	//Official libs
 	"bytes"
@@ -194,214 +195,12 @@ func (p *$obj.name.value) ToBytes() []byte {
 	return transport.Bytes()
 }
 
-//mongo methods
+#include "tmpl" + $os.sep + "mongo.tmpl"
 
-func (o *$obj.name.value) Save() (info *mgo.ChangeInfo, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
+#include "tmpl" + $os.sep + "form.tmpl"
 
-	if o.ID == "" {
-		o.ID = bson.NewObjectId()
-	}
+#include "tmpl" + $os.sep + "foreign_key.tmpl"
 
-	#for key, fields in $obj.search.iteritems()
-	core.Index("$(obj.name.value.lower())", "$(key.lower())", o.ID.Hex(), nil, $(obj.name.value)Search$(key)Obj{
-		#for field in fields
-		o.$(field),
-		#end for
-	})
-	#end for
+#include "tmpl" + $os.sep + "collection.tmpl"
 
-
-	return col.UpsertId(o.ID, o)
-}
-
-//Form methods
-
-func (o *$obj.name.value) ReadForm(params map[string]string) {
-#for field in $obj.fields
-#if $field.name.value != "ID"
-	if val, ok := params["$field.name.value"]; ok {
-	#if $field.type == "string"
-		o.$field.name.value = val
-	#else if $field.type == "i32"
-		intVal, _ := strconv.Atoi(val)
-		o.$field.name.value = int32(intVal)
-	#else if $field.type == "i64"
-		intVal, _ := strconv.ParseInt(val, 10, 64)
-		o.$field.name.value = intVal
-	#else if $field.type == "bool"
-		o.$field.name.value = (val != "")
-	#else
-	Change go.tmpl go support $field.type now!
-	#end if
-	#if $field.type == "bool"
-	} else {
-		o.$field.name.value = false	
-	#end if
-	}
-#end if
-#end for
-}
-
-#for field in $obj.fields
-#if $field.name.value != "ID"
-func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
-	name := "${field.name.value}"
-	ret, ok := o.widgets[name]
-	if !ok || ret==nil {
-		ret = &Widget{
-			Label: "$field.label",
-		#if $field.type == "string"
-			Value : o.$field.name.value,
-		#else if $field.type == "i32"
-			Value : strconv.FormatInt(int64(o.$field.name.value), 10),
-		#else if $field.type == "i64"
-			Value : strconv.FormatInt(o.$field.name.value, 10),
-		#else if $field.type == "bool"
-			Value : strconv.FormatBool(o.$field.name.value),
-		#else
-		Change go.tmpl go support $field.type now!
-		#end if
-			Name: "$field.name.value",
-			PlaceHolder: "",
-			Type: "$field.type",
-		}
-		if o.widgets == nil {
-			o.initWidget()
-		}
-		o.widgets[name] = ret
-	}
-
-	return ret
-}
-#end if
-#end for
-
-func (o *$obj.name.value) Widgets() []*Widget {
-	return []*Widget{
-#for field in $obj.fields
-#if $field.name.value != "ID"
-		o.${field.name.value}Widget(),
-#end if
-#end for
-	}
-}
-
-//foreigh keys
-
-#for field in $obj.fields
-	#if $field.foreign != ""
-func (p *$obj.name.value) Get$(field.foreign)() (result *$field.foreign, err error) {
-	return $(field.foreign)FindByID(p.$field.name.value)
-}
-
-func (p *$obj.name.value) Set$(field.foreign)(obj *$field.foreign) {
-	p.$field.name.value = obj.ID.Hex()
-}
-
-func (o *$field.foreign) GetAll$(obj.name.value)() (result []*$obj.name.value, err error) {
-	query := bson.M{"$(field.foreign)ID": o.ID.Hex()}
-	return $(obj.name.value)FindAll(query)
-}
-	#end if
-#end for
-
-
-//Collection Manage methods
-
-func $(obj.name.value)FindOne(query interface{}, sortFields ...string) (result *$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	q := col.Find(query)
-
-	if sortFields == nil {
-		q.Sort("-_id")
-	} else {
-		q.Sort(sortFields...)
-	}
-
-	err = q.One(&result)
-	return
-}
-
-func $(obj.name.value)Find(query interface{}, limit int, offset int, sortFields ...string) (result []*$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	q := col.Find(query).Limit(limit).Skip(offset)
-
-	if sortFields == nil {
-		q.Sort("-_id")
-	} else {
-		q.Sort(sortFields...)
-	}
-
-	err = q.All(&result)
-	return
-}
-
-func $(obj.name.value)FindAll(query interface{}, sortFields ...string) (result []*$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	q := col.Find(query)
-
-	if sortFields == nil {
-		q.Sort("-_id")
-	} else {
-		q.Sort(sortFields...)
-	}
-
-	err = q.All(&result)
-	return
-}
-
-func $(obj.name.value)Count(query interface{}) (result int) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	result, _ = col.Find(query).Count()
-	return
-}
-
-func $(obj.name.value)FindByID(id string) (result *$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	if !bson.IsObjectIdHex(id) {
-		err = ErrInvalidObjectId
-		return
-	}
-	err = col.FindId(bson.ObjectIdHex(id)).One(&result)
-	return
-}
-
-func $(obj.name.value)RemoveByID(id string) (result *$obj.name.value, err error) {
-	session, col := db.GetCol("$obj.name.value")
-	defer session.Close()
-
-	err = col.RemoveId(bson.ObjectIdHex(id))
-	#for key, v in $obj.search.iteritems()
-	core.Delete("$(obj.name.value.lower())", "$(key.lower())", id, nil)
-	#end for
-	return
-}
-
-// Search
-#for key, v in $obj.search.iteritems()
-func $(obj.name.value)Search$(key)(word string, limit int, offset int) (core.SearchResult, error) {
-	searchJson := `{
-    "query" : {
-        "query_string" :  {
-	      "default_operator": "OR",
-	      "fields": ` + `$(str(v).replace("'", '"'))` + `,
-	      "query": "` + word + `"
-	    }
-    }
-}`
-	args := map[string]interface{} {"from" : offset, "size": limit}
-	return core.SearchRequest("$(obj.name.value.lower())", "$(key.lower())", args, searchJson)
-}
-#end for
+#include "tmpl" + $os.sep + "search.tmpl"
