--- a/tmpl/field_string.tmpl
+++ b/tmpl/field_string.tmpl
@@ -1,3 +1,4 @@
+
 func (p *$obj.name.value) readField$(field.tag)(iprot thrift.TProtocol) error {
 	if v, err := iprot.ReadString(); err != nil {
 		return fmt.Errorf("error reading field $(field.tag): %s", err)
@@ -9,4 +10,18 @@ func (p *$obj.name.value) readField$(field.tag)(iprot thrift.TProtocol) error {
 		#end if
 	}
 	return nil
+}
+
+func (p *$obj.name.value) writeField$(field.tag)(oprot thrift.TProtocol) (err error) {
+	if err := oprot.WriteFieldBegin("$field.name.value", thrift.STRING, $field.tag); err != nil {
+		return fmt.Errorf("%T write field begin error $field.type:$field.name.value: %s", p, err)
+	}
+	if err := oprot.WriteString(string(p.$field.name.value)); err != nil {
+		return fmt.Errorf("%T.$field.name.value ($field.type) field write error: %s", p, err)
+	}
+
+	if err := oprot.WriteFieldEnd(); err != nil {
+		return fmt.Errorf("%T write field end error 1:ID: %s", p, err)
+	}
+	return err
 }
