--- a/go_enum.tmpl
+++ b/go_enum.tmpl
@@ -1,10 +1,17 @@
 package $namespace
 
 #for obj in $objs
-const (
-	#for item in $obj.values
-	${obj.name.value.upper()}_${item.name.value.upper()} int32 = $item.tag
-	#end for
-)
+var (
+	$obj.name.value = struct {
+		${",".join([item.name.value for item in obj.values])} int32
+} {
+		${",".join([str(i) for i in range(0, len(obj.values))])},
+	}
 
+	${obj.name.value}Label = []string {
+#for label in $obj.labels
+		$label,
+#end for
+	}
+)
 #end for
