--- a/go.tmpl
+++ b/go.tmpl
@@ -5,6 +5,9 @@ import (
 	//Official libs
 	"bytes"
 	"fmt"
+	#if $obj.need_re
+	"regexp"
+	#end if
 	#if $obj.need_strconv
 	"strconv"
 	#end if
@@ -61,10 +64,6 @@ func New$(obj.name.value)WithParams(params map[string]string) *$obj.name.value {
 	o := new($obj.name.value)
 	o.ReadForm(params)
 	return o
-}
-
-func (w *$(obj.name.value)) initWidget() {
-	w.widgets = make(map[string]*Widget, $len($obj.fields))
 }
 
 //Thrift Methods
