--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -84,6 +84,9 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			Name: "$field.name.value",
 			PlaceHolder: "",
 			Type: "$field.type",
+		#if hasattr($field, "enums")
+			EnumData : $(namespace).$(field.enums)Label,
+		#end if
 		}
 		if o.widgets == nil {
 			o.initWidget()
