--- a/go.tmpl
+++ b/go.tmpl
@@ -3,28 +3,14 @@ package $namespace
 #import os
 import (
 	//Official libs
-	"bytes"
-	"fmt"
-	#if $obj.need_enum
-	"$src_path/$namespace"
-	#end if
-	#if $obj.need_re
-	"regexp"
-	#end if
-	#if $obj.need_strconv
-	"strconv"
-	#end if
-	#if $obj.need_strings
-	"strings"
-	#end if
+	#for item in $obj.imports
+	"$item"
+	#end for
 
 	//3rd party libs
 	"labix.org/v2/mgo"
 	"labix.org/v2/mgo/bson"
 	"github.com/sipin/gothrift/thrift"
-	#if $obj.need_search
-	"github.com/mattbaird/elastigo/core"
-	#end if
 
 	//Own libs
 	"db"
