--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -88,6 +88,8 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			EnumData : $(namespace).$(field.enums)Label,
 		#else if hasattr($field, "stringList")
 			StringList : $(namespace).$field.stringList,
+		#else if hasattr($field, "bindData")
+			GetBindData : $field.bindData,
 		#end if
 		}
 		if o.widgets == nil {
