Add datetime support

--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -2,8 +2,9 @@ package $namespace
 
 import (
 	//Official libs
-	"fmt"
 	"errors"
+	"fmt"
+	"time"
 
 	//3rd party libs
 	"github.com/sipin/gothrift/thrift"
@@ -31,4 +32,17 @@ type Widget struct {
 	EnumData    map[int32]string
 	StringList  []string
 	GetBindData	func() (data []*IDLabelPair)
+}
+
+var DateTimeLayout = "2006-01-02 15:04"
+
+func I64Time(c int64) string {
+	if c == 0 {
+		return ""
+	}
+	return time.Unix(c, 0).Format(DateTimeLayout)
+}
+
+func I32Time(c int32) string {
+	return I64Time(int64(c))
 }
