--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -10,9 +10,15 @@ func (o *$obj.name.value) ReadForm(params map[string]string) (hasError bool) {
 	if val, ok := params["$field.name.value"]; ok {
 	#if $field.type == "string"
 		o.$field.name.value = val
+	#else if $field.type == "i32" and $field.widget_type in ["datetime"]
+		intVal, _ := time.Parse(DateTimeLayout, val)
+		o.$field.name.value = int32(intVal.Unix())
 	#else if $field.type == "i32"
 		intVal, _ := strconv.Atoi(val)
 		o.$field.name.value = int32(intVal)
+	#else if $field.type == "i64" and $field.widget_type in ["datetime"]
+		intVal, _ := time.Parse(DateTimeLayout, val)
+		o.$field.name.value = intVal.Unix()
 	#else if $field.type == "i64"
 		intVal, _ := strconv.ParseInt(val, 10, 64)
 		o.$field.name.value = intVal
@@ -70,9 +76,13 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			Label: "$field.label",
 		#if $field.type == "string"
 			Value : o.$field.name.value,
-		#else if $field.type == "i32"
+		#else if $field.type == "i32" and $field.widget_type in ["datetime"]
+			Value : I32Time(o.$field.name.value),
+		#else if $field.type == "i32" 
 			Value : strconv.FormatInt(int64(o.$field.name.value), 10),
-		#else if $field.type == "i64"
+		#else if $field.type == "i64" and $field.widget_type in ["datetime"]
+			Value : I64Time(o.$field.name.value),
+		#else if $field.type == "i64" 
 			Value : strconv.FormatInt(o.$field.name.value, 10),
 		#else if $field.type == "bool"
 			Value : strconv.FormatBool(o.$field.name.value),
