--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -132,12 +132,17 @@ func (o *$obj.name.value) GetListedLabels() []*IDLabelPair {
 	}
 }
 
+func (o *$obj.name.value) Id() string {
+	return o.ID.Hex()
+}
+
 func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 	switch fieldKey {
 #for field in $obj.fields
-#if $field.name.value != "ID"
 	case "$field.name.value":
-	#if $field.type == "string"
+	#if $field.name.value == "ID"
+		Value = o.ID.Hex()
+	#else if $field.type == "string"
 		Value = o.$field.name.value
 	#else if $field.type == "i32" and $field.widget_type in ["datetime"]
 		Value = I32Time(o.$field.name.value)
@@ -154,7 +159,6 @@ func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 	#else
 	Change go.tmpl go support $field.type now!
 	#end if
-#end if
 #end for
 	}
 	return
