--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -136,6 +136,10 @@ func (o *$obj.name.value) Id() string {
 	return o.ID.Hex()
 }
 
+func (o *$obj.name.value) GetLabel() string {
+	return "$obj.label"
+}
+
 func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 	switch fieldKey {
 #for field in $obj.fields
